[package]
name = "srt"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "srt"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
regex = "1.10"
hyper = { version = "1.4", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
tower = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
tempfile = "3.12"
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
strip = true
lto = true
codegen-units = 1
